--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
 	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 	<button id="boton">boton</button>
+	<button id="botonDos">boton</button>
+
 </body>
 </html>
