se agrego nuevamente otro boton

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 			<div class="columna2"><h3>Columna 1</h3></div>
 		</div>
 		<button id="boton">boton1</button>
+		<button id="boton">boton2</button>
+
 		
 		
 	</body>
