se agrego un boton y se cambiaron los estilos de los botones

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		</div>
 		<button id="boton">boton1</button>
 		<button id="boton">boton2</button>
+		<button id="boton">boton3</button>
 
 		
 		
